# MCPs

./: BULLETPROOF_DEPLOYMENT.md  CLAUDE.md  CONTAINER_SETUP_GUIDE.md  DEPLOYMENT_GUIDE.md  Dockerfile  Dockerfile.optimized  Dockerfile.simple  MCP_IMPLEMENTATION_SUMMARY.md  MCP_SERVER_PLAN.md  MCP_USAGE_GUIDE.md  QUICK_START.md  README.md  README_MCP.md  annHMMSegments.R  docker-compose.simple.yml  docker-compose.yml  pyproject.toml  pytest.ini  test_simple_setup.py
config/: server_config.json
scripts/: annotate_genomic_segments.R  create_transfer_package.sh  run_tests.sh
src/annomics_mcp/: __init__.py  server.py  simple_server.py
src/annomics_mcp/schemas/: __init__.py  bed_formats.py  genome_builds.py
src/annomics_mcp/tools/: __init__.py
src/annomics_mcp/utils/: __init__.py  r_interface.py
tests/: __init__.py  all_results_repeats_promoter.bed  test_negative_cases.py  test_positive_cases.py
tests/integration/: test_mcp_server.py
tests/mouse_results/: treatment_group_annotated.tsv  treatment_group_summary.tsv
tests/unit/: test_bed_formats.py  test_genome_builds.py  test_r_interface.py
