[project]
name = "annomics-mcp"
version = "1.0.0"
description = "MCP Server for genomic segment annotation using annotatr"
readme = "README.md"
authors = [
    { name = "Samuel Ahuno", email = "ekwame001@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.0.0",
    "pandas>=2.0.0",
    "pydantic>=2.0.0",
    "typing-extensions>=4.0.0",
    "pathlib>=1.0.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-mock>=3.10.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

[project.scripts]
annomics-mcp = "annomics_mcp.server:main"

[build-system]
requires = ["uv_build>=0.8.4,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "mypy>=1.17.1",
    "pytest>=8.4.1",
    "pytest-asyncio>=1.1.0",
    "pytest-mock>=3.14.1",
    "ruff>=0.12.7",
]
